Member page scrolling works for those that should be able to see the list now. Fixed LFG-86 Fixed LFG-75. Names under groups and user cards no longer escape the card. Fixed LFG-87. Changing group immediately no longer leads to infinite-scrolling loading from the wrong group Disabled Turbolinks Transition cache. Maybe will turn it back on in the future. Fixed LFG-86 Scrolling on Unapproved Members in group members list is fixed now. Fixed LFG-84 User feed URL no longer ignores username on posts. Will 404 if the user does not match the owner of the post. Fixed LFG-73 Group description box no longer overflows on <a> tags, will wrap them on the nextline. Added group show post to group controller. Public posting groups now let anyone post as long as they're logged in. Will write new tests soon for missing code coverage, focusing on fixing bugs first.

--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -79,15 +79,17 @@
 		border: rem-calc(1) solid #000;
 	}
 	.title {
-		position: absolute;
-		width: 90%;
+		position: relative;
+		display: block;
+		width: 100%;
 		word-wrap: break-word;
 		text-align: right;
 		padding: 0 rem-calc(5);
-		bottom: rem-calc(5);
+		top: rem-calc(-35);
 		color: white;
 		font-size: 18pt;
 		font-weight: 600;
+		z-index: 9;
 		text-shadow:
 		   rem-calc(-1) rem-calc(-1) 0 #000,  
 			rem-calc(1) rem-calc(-1) 0 #000,
@@ -249,6 +251,7 @@
 		font-weight: 600;
 		font-style: italic;
 		white-space: pre-wrap;
+		word-wrap: break-word;
 	}
 	.buttons {
 		a {
